--- a/projects/src/soundex/CMakeLists.txt
+++ b/projects/src/soundex/CMakeLists.txt
@@ -15,6 +15,7 @@ target_link_libraries(
     ${target_name}
     PRIVATE
     libsoundex
+    nlohmann_json::nlohmann_json
 )
 
 add_subdirectory(soundex)
