--- a/projects/src/soundex/soundex/CMakeLists.txt
+++ b/projects/src/soundex/soundex/CMakeLists.txt
@@ -14,6 +14,7 @@ target_link_libraries(
     ${target_name}
     PRIVATE
     rapidcsv
+    nlohmann_json::nlohmann_json
 )
 
 target_include_directories(
