Add tests for smart pointers

--- a/projects/tests/CMakeLists.txt
+++ b/projects/tests/CMakeLists.txt
@@ -6,10 +6,18 @@ add_executable(
     ${PROJECT_SOURCE_DIR}/projects/include/OPoverload/time.hpp
     soundex.cpp
     ${PROJECT_SOURCE_DIR}/projects/include/soundex/soundex.hpp
+    smartptr.cpp
+    ${PROJECT_SOURCE_DIR}/projects/include/smartptr/unique_ptr.hpp
+    ${PROJECT_SOURCE_DIR}/projects/include/smartptr/shared_ptr.hpp
 )
 
-include(CompileOptions)
-set_compile_options(${target_name})
+set_target_properties(
+    ${target_name}
+    PROPERTIES
+    CXX_STANDARD 20
+    CXX_STANDARD_REQUIRED ON
+    CXX_EXTENSIONS OFF
+)
 
 target_link_libraries(
     ${target_name}
