Refactor CMakeLists.txt of tests

--- a/projects/tests/CMakeLists.txt
+++ b/projects/tests/CMakeLists.txt
@@ -3,21 +3,12 @@ set(target_name tests)
 add_executable(
     ${target_name}
     time.cpp
-    ${PROJECT_SOURCE_DIR}/projects/include/OPoverload/time.hpp
     soundex.cpp
-    ${PROJECT_SOURCE_DIR}/projects/include/soundex/soundex.hpp
     smartptr.cpp
-    ${PROJECT_SOURCE_DIR}/projects/include/smartptr/unique_ptr.hpp
-    ${PROJECT_SOURCE_DIR}/projects/include/smartptr/shared_ptr.hpp
 )
 
-set_target_properties(
-    ${target_name}
-    PROPERTIES
-    CXX_STANDARD 20
-    CXX_STANDARD_REQUIRED ON
-    CXX_EXTENSIONS OFF
-)
+include(CompileOptions)
+set_compile_options(${target_name})
 
 target_link_libraries(
     ${target_name}
